2008-08-09  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/37011
	* symbol.c (gfc_add_extension): New function.
	* decl.c (gfc_get_type_attr_spec): Call it.
	(gfc_match_derived_decl): Set symbol extension attribute from
	attr.extension.
	* gfortran.h : Add prototype for gfc_add_extension.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@138891 138bc75d-0d04-0410-961f-82ee72b054a4